added recent bills

--- a/views/datapage.handlebars
+++ b/views/datapage.handlebars
@@ -5,7 +5,6 @@
         </div>
 
     </div>
-</div>
 
 
 
@@ -47,7 +46,7 @@
             <div class="card" id=card${i}>
                 <div class="card-body">
                     <h4 class="card-title">Bill Number: ${bill.bill_number}</h4>
-                    <p class="card-text">Chamber: ${bill.chamber.toUpperCase()}</p>
+                    <p class="card-text">Chamber: ${bill.chamber}</p>
                     <p class="card-text">Description: ${bill.description}</p>
                     <a href="${bill.bill_url}" class="btn btn-primary">View PDF</a>
                 </div>
